package com.directi.training.isp.exercise;

public interface ISensor {
    void proximityCallback();

}
