package com.directi.training.isp.exercise;

public interface ITimer {
    void timeOutCallback();
}
